--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,1 @@
-adafruit-circuitpython-display-text
-adafruit-circuitpython-fruitjam
-adafruit-circuitpython-hid
-adafruit-circuitpython-imageload
-asyncio
-neopixel
+circup
