--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,9 @@
-adafruit-circuitpython-display-text
-adafruit-circuitpython-fruitjam
-adafruit-circuitpython-hid
-adafruit-circuitpython-imageload
-adafruit-circuitpython-tlv320
+adafruit_display_text
+adafruit_fruitjam
+adafruit_hid
+adafruit_imageload
+adafruit_pathlib
+adafruit_tlv320
 asyncio
 neopixel
 relic_waveform
